# fish_11

./: .gitignore  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  DIAGNOSTIC_MESSAGE_DISPLAY.md  LOGGING_IMPROVEMENTS.txt  README.md  build-unified.sh  build_output_after_fifth_fix.txt  create-dev-branch-v2.ps1  fish_11.ini  new-branch.ps1  package-lock.json  rebuild_and_test.ps1  resume_refactorisation_logging.txt  test_output.txt
.cargo/: config.toml
.github/: README.md  RELEASE_PROCESS.md  SETUP_SUMMARY.md
.github/workflows/: audit.yml  auto-tag.yml  build.yml  ci.yml  release.yml
docs/: API_REFERENCE.md  CLI_REFERENCE.md  ERROR_HANDLING.md  FCEP-1_DRAFT.txt  FISH10_FISH11_COMPARISON.md  FISH10_INTEGRATION.md  INSTALLATION.md  LOGGING_ANALYSIS_AND_REFACTORING.md  PROJECT_STRUCTURE.md  RELEASE_PROCESS_MANUAL.md  ROADMAP.md  SENSITIVE_CONTENT_LOGGING.md  TOPIC_ENCRYPTION.md  USAGE_EXAMPLES.md  master_key_analysis.md  mircryption_review.txt
docs/IRCSRP/: ircsrp.1.0.txt  ircsrp.2.0.txt  ircsrp2.py
docs/znc/: mircryption.cpp
experimental/: README.md  ssl_inline_patch.rs
fish_11_cli/: Cargo.toml  build.rs
fish_11_cli/src/: helpers_cli.rs  main.rs  platform_types.rs
fish_11_core/: Cargo.toml  README.md  build.rs
fish_11_core/src/: buffer_utils.rs  globals.rs  lib.rs
fish_11_core/src/config/: encrypted_config.rs  mod.rs
fish_11_core/src/logging/: config.rs  context.rs  errors.rs  filters.rs  formatter.rs  macros.rs  metrics.rs  mod.rs  security.rs  unified_logger.rs
fish_11_core/src/logging/writers/: console_writer.rs  file_writer.rs  mod.rs  null_writer.rs
fish_11_core/src/master_key/: derivation.rs  encryption.rs  keystore.rs  keystore_encryption.rs  memory.rs  mod.rs  password_change.rs  password_validation.rs  rotation.rs
fish_11_core/src/master_key/core/: config_key.rs  log_key.rs  master_key.rs  mod.rs
fish_11_dll/: Cargo.toml  build.rs  check_errors.txt  errors_refactor.txt  fish_11.ini
fish_11_dll/src/: buffer_utils.rs  crypto.rs  dll_function_utils.rs  engine_registration.rs  error.rs  lib.rs  logging.rs  logging_macros.rs  platform_types.rs  unified_error.rs  utils.rs
fish_11_dll/src/channel_encryption/: init_key.rs  mod.rs  process_key.rs
fish_11_dll/src/config/: channel_key_utils.rs  channel_keys.rs  config_access.rs  encrypted_file_storage.rs  entries.rs  file_storage.rs  key_management.rs  manual_channel_keys.rs  mod.rs  models.rs  networks.rs  settings.rs  state_management.rs  topics.rs
fish_11_dll/src/crypto/: blowfish.rs  chacha20.rs  dh1080.rs  mod.rs  x25519.rs
fish_11_dll/src/dll_interface/: core.rs  dll_error.rs  fish10_decryptmsg.rs  fish10_dh1080.rs  fish10_encryptmsg.rs  fish10_register_engine.rs  fish10_setkey.rs  fish10_settopic.rs  fish11_coreversion.rs  fish11_decryptmsg.rs  fish11_encryptmsg.rs  fish11_exchangekey.rs  fish11_filedelkey.rs  fish11_filegetkey.rs  fish11_filelistkeys.rs  fish11_filelistkeysitem.rs  fish11_genkey.rs  fish11_getconfigpath.rs  fish11_getencryptionstats.rs  fish11_getkeyttl.rs  fish11_getratchetstate.rs  fish11_hasmanualchannelkey.rs  fish11_hasratchetchannelkey.rs  fish11_help.rs  fish11_logdecrypt.rs  fish11_logdecryptfile.rs  fish11_logencrypt.rs  fish11_logsetkey.rs  fish11_masterkey.rs  fish11_removemanualchannelkey.rs  fish11_removeratchetchannelkey.rs  fish11_setencryptionprefix.rs  fish11_setfishprefix.rs  fish11_setkey.rs  fish11_setkeyfromplaintext.rs  fish11_setmanualchannelkey.rs  fish11_setmanualchannelkeyfrompassword.rs  fish11_setmircdir.rs  fish11_setnetwork.rs  fish11_settopic.rs  (+7 more)
fish_11_dll/src/dll_interface/fish_10/: fish10_decryptmsg.rs  fish10_delkey.rs  fish10_dh1080.rs  fish10_encryptmsg.rs  fish10_gettopicsetting.rs  fish10_haskey.rs  fish10_register_engine.rs  fish10_setkey.rs  fish10_settopic.rs  fish10_settopicsetting.rs  mod.rs
fish_11_dll/src/legacy/: blowfish.rs  config.rs  dh1080.rs  encryption.rs  fish10_config.rs  fish10_encryption.rs  fish10_engine.rs  fish10_integration_tests.rs  fish10_key_management.rs  fish10_message_detection.rs  fish10_topics.rs  integration_tests.rs  key_management.rs  message_detection.rs  mod.rs
fish_11_dll/src/utils/: key_derivation.rs
fish_11_dll/tests/: legacy_compat_test.rs  session_expiry_test.rs
fish_11_inject/: Cargo.toml  README.md  build.rs
fish_11_inject/src/: buffer_pool.rs  dll_interface.rs  engines.rs  helpers_inject.rs  hook_socket.rs  hook_ssl.rs  lib.rs  lock_utils.rs  pointer_validation.rs  socket_info.rs  ssl_detection.rs  ssl_inline_patch.rs  ssl_mapping.rs
fish_11_inject/src/socket/: buffers.rs  dispatcher.rs  info.rs  mod.rs  state.rs
fish_11_inject/src/socket/handlers/: incoming_irc.rs  mod.rs  network.rs  outgoing_irc.rs  protocol_detection.rs  tls.rs
fuzz/: Cargo.toml  README.md  irc_fish.dict
fuzz/fuzz_targets/: fuzz_base64_parsing.rs  fuzz_decrypt_message.rs  fuzz_encrypt_message.rs  fuzz_exchange_key.rs  fuzz_ini_parsing.rs  fuzz_irc_message_parsing.rs  fuzz_ratchet.rs  fuzz_set_key.rs  fuzz_set_mirc_dir.rs  fuzz_wrap_unwrap_key.rs
scripts/: build_release.ps1  create-release.ps1  new-branch.ps1  simulate_key_exchange.ps1  test-release-build.ps1  upload-release-assets.ps1
scripts/mirc/: fish_10.mrc  fish_11.mrc  mircryption.mrc
scripts/mirc/modules/: fish11_channel.mrc  fish11_encrypt_in.mrc  fish11_encrypt_out.mrc  fish11_key_exchange.mrc  fish11_key_management.mrc  fish11_legacy.mrc  fish11_masterkey.mrc  fish11_menus.mrc  fish11_startup.mrc  fish11_utils.mrc
