[workspace]
members = ["fish_11_dll", "fish_11_cli", "fish_11_inject", "fish_11_core"]

# FUZZING ON LINUX : enable here !
# Uncomment the line below on Unix systems to enable fuzzing:
# members = ["fish_11_dll", "fish_11_cli", "fish_11_inject", "fish_11_core", "fuzz"]
resolver = "2"

[workspace.metadata]
# Configuration par défaut pour Windows
default-target = "i686-pc-windows-msvc"

[profile.dev]
opt-level = 0      # No optimization for faster compilation
debug = 2          # Full debug information (maximum)
strip = false      # Keep all symbols
panic = "unwind"   # Full stack traces for debugging
incremental = true # Faster recompilation
lto = false        # Faster compilation

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link Time Optimization
codegen-units = 1 # Maximum optimization
panic = "abort"   # Remove unwinding code
strip = true      # Remove symbols

[profile.release.package."*"]
codegen-units = 1
