[package]
name = "fish_11_cli"
version = "11.25.0"
edition = "2021"
description = "FiSH_11 - secure encryption for mIRC : CLI tool"
license = "GPL v3.0"
authors = ["GuY"]

[dependencies]
libloading = "0.9.0"
fish_11_core = { path = "../fish_11_core" }
#rand = "0.9.2"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "libloaderapi"] }
