[package]
name = "fish_11_core"
version = "11.25.0"
edition = "2021"
authors = ["GuY"]
description = "FiSH_11 - Core utilities (platform-independent)"
license = "GPL-3.0-only"

[lib]
name = "fish_11_core"
crate-type = ["lib"]

[dependencies]
# Core utilities - no platform-specific dependencies
once_cell = "1.20.2"
regex = "1.11.1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
cfg-if = "1.0"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
