[package]
name = "fish_11_core"
version = "11.25.0"
edition = "2021"
authors = ["GuY"]
description = "FiSH_11 - Core utilities (platform-independent)"
license = "GPL-3.0-or-later"

[lib]
name = "fish_11_core"
crate-type = ["lib"]

[dependencies]
# Core utilities - no platform-specific dependencies
once_cell = "1.20.2"
regex = "1.11.1"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
rand = "0.8.5"
scopeguard = "1.2.0"

argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
secrecy = "0.8"
zeroize = "1.6"
getrandom = "0.3"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
