[package]
name = "fish_11"
version = "11.25.0"
edition = "2021"
description = "FiSH_11 - secure encryption for mIRC : the core library"
license = "GPL v3.0"
build = "build.rs"
authors = ["GuY"]

[lib]
name = "fish_11"
# We are building a DLL, but also rlib for fuzzing/testing
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "memoryapi", "processthreadsapi", "winnt", "handleapi", "errhandlingapi"] }
lazy_static = "1.4.0"
ini = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
x25519-dalek = "2.0.0-rc.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.21"
directories = "5.0"
parking_lot = "0.12"
# fish_11_core, on le reference par path
fish_11_core = { path = "../fish_11_core" }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "winuser", "libloaderapi"] }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
tempfile = "3.0"

[package.metadata.cargo-post]
post-build = [
    "mt.exe",
    "-manifest",
    "fish_11.dll.manifest",
    "-outputresource:target/debug/fish_11.dll;2",
]

[profile.release]
#debug = 1
#opt-level = 3
codegen-units = 1
#lto = "thin"
#panic = "abort"

[profile.release.package."*"]
codegen-units = 1
