[package]
name = "fish_11"
version = "11.25.0"
edition = "2021"
description = "FiSH_11 - secure encryption for mIRC : the core library"
license = "GPL-v3.0"
authors = ["GuY"]

[lib]
name = "fish_11"
# We are building a DLL, but also rlib for fuzzing/testing
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4"
once_cell = "1.19.0"
# An implementation of elliptic curve Diffie-Hellman key exchange over Curve25519.
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.10"
crypto = "0.5.1"

rand = "0.8.5"                                   #Hard to bump to 0.9 because x25519 is not compatible >v0.9
sha2 = "0.10"
base64 = "0.22.1"
configparser = "3.1.0"
log = { version = "0.4.26", features = ["std"] }
chrono = "0.4.40"
ini = "1.3.0"

# Security enhancements
subtle = "2.5"
secrecy = "0.8"
hkdf = "0.12"
lru_time_cache = "0.11"
zeroize = "1.6"
regex = "1.11.1"
libc = "0.2.177"
parking_lot = "0.12"
thiserror = "2.0"

# Shared core library
fish_11_core = { path = "../fish_11_core" }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "winuser", "libloaderapi"] }

[dev-dependencies]
tempfile = "3.0"

[package.metadata.cargo-post]
post-build = [
    "mt.exe",
    "-manifest",
    "fish_11.dll.manifest",
    "-outputresource:target/debug/fish_11.dll;2",
]

[profile.release]
#debug = 1
#opt-level = 3
codegen-units = 1
#lto = "thin"
#panic = "abort"

[profile.release.package."*"]
codegen-units = 1