[package]
name = "fish_11_inject"
version = "11.25.0"
edition = "2021"
authors = ["GuY"]
description = "FiSH_11 - secure encryption for mIRC : the Windows DLL injection and socket hooking for mIRC"
license = "GPL v3.0"

[lib]
# DLL filename
name = "fish_11_inject"
crate-type = ["cdylib"]

[dependencies]
# For Windows API
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

# For hooking
retour = { git = "https://github.com/Hpmason/retour-rs.git" }

# Utility
lazy_static = "1.5.0"
log = "0.4.27"
parking_lot = "0.12"
winapi = { version = "0.3.9", features = ["winsock2", "ws2def", "psapi", "memoryapi"] }
sha2 = "0.10"
chrono = "0.4"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
