[package]
name = "fish_11_inject"
version = "11.25.0"
edition = "2021"
authors = ["GuY"]
description = "FiSH_11 - secure encryption for mIRC : the Windows DLL injection and socket hooking for mIRC"
license = "GPL v3.0"

[lib]
# DLL filename
name = "fish_11_inject"
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
# For Windows API
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug", # For outputdebugstring if needed
] }

# For hooking
# Forked from : https://github.com/Hpmason/retour-rs.git to be sure it is maintained and working
retour = { git = "https://github.com/ggielly/retour-rs.git" }

# Utility
lazy_static = "1.5.0"
log = { version = "0.4.27", features = ["std"] }
parking_lot = "0.12"
dashmap = "6.1"
once_cell = "1.20"
sha2 = "0.10"
chrono = "0.4"

[dependencies.fish_11_core]
path = "../fish_11_core"

# NO dependencies on non-Windows platforms
[target.'cfg(not(windows))'.dependencies]

# NO [dependencies] !
# Intentionally empty to prevent building on non-Windows platforms !
