[package]
name = "fish_11-fuzz"
version = "11.25.0"
publish = false
edition = "2021"
license = "GPL-3.0"
authors = ["GuY"]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
libc = "0.2"

# Dépendance vers la DLL pour pouvoir appeler ses fonctions
[dependencies.fish_11_dll]
path = "../fish_11_dll"

[dependencies.tempfile]
version = "3.8"

[dependencies.base64]
version = "0.22.1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_decrypt_message"
path = "fuzz_targets/fuzz_decrypt_message.rs"
test = false
doc = false

[[bin]]
name = "fuzz_encrypt_message"
path = "fuzz_targets/fuzz_encrypt_message.rs"
test = false
doc = false

[[bin]]
name = "fuzz_base64_parsing"
path = "fuzz_targets/fuzz_base64_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ini_parsing"
path = "fuzz_targets/fuzz_ini_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_irc_message_parsing"
path = "fuzz_targets/fuzz_irc_message_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wrap_unwrap_key"
path = "fuzz_targets/fuzz_wrap_unwrap_key.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ratchet"
path = "fuzz_targets/fuzz_ratchet.rs"
test = false
doc = false

[[bin]]
name = "fuzz_exchange_key"
path = "fuzz_targets/fuzz_exchange_key.rs"
test = false
doc = false

[[bin]]
name = "fuzz_set_key"
path = "fuzz_targets/fuzz_set_key.rs"
test = false
doc = false